--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,14 +1,15 @@
 spring:
 
   datasource:
-    url: jdbc:mariadb://localhost:3306/shop
     username: root
     password: 8338
+
     driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/shop
   jpa:
     #    defer-datasource-initialization: true ???? ??? data.sql? ??? ???? ????? ???? sql? ??????
     defer-datasource-initialization: true
-    database-platform: mariadb
+    database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
       ddl-auto: create-drop
     open-in-view: false
@@ -16,4 +17,3 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-
